NEWS
====

.. contents::

0.9.4
-----

* Fixed a security vulnerability in ``paste.urlparser``'s StaticURLParser
  and PkgResourcesParser where, with some servers, you could escape
  the document root.

* More control of where the output of ``paste.debug.prints`` goes.

* Added a warning to ``paste.wsgilib.add_close`` if the upstream
  app_iter consumer doesn't call the ``app_iter.close()`` method.

* Fixed ``testapp.post(params={})``

* Fixed ``paste.translogger.TransLogger`` to log to the Apache combined
  log format as advertised.

* Fixed ``paste.urlparser`` classes to handle quoted characters (e.g.
  %20) in URL paths.

* Changed ``paste.session`` to allow manipulating a session for the
  first time after ``start_response`` is called.

* Added ``paste.wsgilib.add_start_close`` which calls a function just
  before returning the first chunk of the app_iter.

* Changed ``paste.urlmap`` so that it matches domain-specific mappings
  before domain-neutral mappings.

* Fixed IE 6 potentially receiving the following ``"400 Bad Request"``
  error on file downloads:
  'Please check your system clock.
   According to this server, the time provided in the
   If-Modified-Since header is in the future.'

* Added a 'no' keyword argument to ``TestResponse.mustcontain``, so
  you can assert that a response does contain some strings at the same
  time that you assert that a response *does not* contain other
  strings, like::

    res = app.get('/')
    res.mustcontain('this must be there',
                    no=['error', 'unexpected'])

* Fixed ``fileapp.FileApp`` to pay attention to the ``If-None-Match``
  header, which does ETag matching; before only ``If-Modified-Since``
  was supported, even though an ``ETag`` header was being sent; in
  particular Firefox would then only send ``If-None-Match`` and so
  conditional requests never worked.

0.9.3
-----

* 0.9.2 Included a version of MochiKit that was no longer compatible with